data/derived/sp14/progs/unify/prog0579.ml.out
Characters 422-484:
  | 5 -> buildThresh(first_forced, build(rand, depth - 1), build(rand, depth - 1));;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type expr * expr * expr * expr
